--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-i18next": "^1.1.7",
     "gatsby-plugin-manifest": "^2.0.9",
+    "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
@@ -25,6 +26,7 @@
     "gatsby-transformer-javascript-frontmatter": "^2.0.5",
     "gatsby-transformer-sharp": "^2.1.8",
     "leaflet": "^1.4.0",
+    "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
