fix: add format json to config cms

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,8 +13,8 @@ collections:
     folder: 'src/data'
     create: true
     identifier_field: id
-    format: js
-    extension: js
+    format: json
+    extension: json
     fields:
       - {label: 'Name', name: 'name', widget: 'string'}
       - {label: 'Path for your page', name: 'path',}
