--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gatsby": "^2.13.39",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-i18next": "^1.1.7",
@@ -29,6 +30,7 @@
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-i18next": "^9.0.9",
