--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-source-filesystem": "^2.0.17",
     "gatsby-transformer-javascript-frontmatter": "^2.0.5",
+    "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.8",
     "leaflet": "^1.4.0",
     "netlify-cms-app": "^2.9.7",
