--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-i18next": "^1.1.5",
     "gatsby-plugin-manifest": "^2.0.9",
+    "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-source-filesystem": "^2.0.17",
     "gatsby-transformer-javascript-frontmatter": "^2.0.5",
+    "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.8",
     "leaflet": "^1.4.0",
     "node-sass": "^4.12.0",
