--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.8",
     "leaflet": "^1.4.0",
+    "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
