--- a/src/data/Kryzanowski.json
+++ b/src/data/Kryzanowski.json
@@ -8,13 +8,13 @@
   "places_for_map": [
     {
       "name": "Академический театр им. Янки Купалы",
-      "width": 53.9009059,
-      "length": 27.56275034479259
+      "width": "53.9009059",
+      "length": "27.56275034479259"
     },
     {
       "name": "Театр сатиры и юмора \"Христофор\"",
-      "width": 53.903325,
-      "length": 27.563281
+      "width": "53.903325",
+      "length": "27.563281"
     }
   ],
   "video_id": "r6AJQHtIsYc",
