--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,7 @@ backend:
 publish_mode: editorial_workflow
 
 media_folder: src/images/uploads
-public_folder: /uploads
+public_folder: uploads
 
 collections:
   - name: 'directors'
