--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   branch: develop
 publish_mode: editorial_workflow
 
-media_folder: "src/images"
+media_folder: src/images/uploads
+public_folder: uploads
 
 collections:
   - name: 'directors'
